# ipmi-menu

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
ipmi_menu/: cli.py
ipmi_menu/config/: messages.en.json  messages.fr.json  messages.py
ipmi_menu/core/: detect.py
ipmi_menu/ui/: prompts.py
src/ipmi_menu/: __init__.py  cli.py
src/ipmi_menu/config/: messages.en.json  messages.fr.json  messages.py  preferences.py  settings.py
src/ipmi_menu/core/: ipmi.py  updater.py  utils.py
src/scripts/: ipmi
tests/: test_ipmi.py  test_messages.py  test_preferences.py  test_updater.py  test_utils.py
