[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipmi-menu"
version = "1.0.4"
description = "Interactive ipmitool menu"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Florian THIERCELIN" }]
keywords = ["ipmi", "ipmitool", "bmc", "datacenter", "kvm", "sol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
ipmi-menu = "ipmi_menu.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ipmi_menu*"]

# Inclure tes fichiers de conf / i18n dans le package
[tool.setuptools.package-data]
ipmi_menu = ["config/*.json", "i18n/*.json", "conf/*.json", "conf/*.toml"]
